Fixes cursors not showing in text fields.

--- a/public/shared/mb-edit/mb-edit.styl
+++ b/public/shared/mb-edit/mb-edit.styl
@@ -25,6 +25,12 @@
   color: black;
 }
 
+.medium-editor-insert-plugin:before {
+  clear: none;
+  display: none;
+  content: "";
+}
+
 .medium-editor-toolbar li button {
   border-right: none;
 }
@@ -32,8 +38,4 @@
 .medium-editor-insert-buttons .medium-editor-insert-buttons-addons li {
   border-radius: 10em;
   // padding: 0.4em 0;
-}
-
-.medium-editor-insert-buttons .medium-editor-insert-buttons-addons li a {
-  margin:
 }
